 10-Apr-2019  - V0.13 Simplify SCOP parent tree to named nodes, add sccs to data payload
 16-Apr-2019    V0.14 Cast all types in tree node lists to string and remove lineage
 17-Apr-2019    V0.15 Adjust parent node attributes
 24-Apr-2019    V0.16 Exclude synthetic SCOP root node from export tree node list
 22-Jun-2019    V0.17 Update development workflow
 13-Jun-2019    V0.18 Improve Py27 character encoding compatibility
 14-Aug-2019    V0.19 Adjust cache management
 29-Aug-2019    V0.20 Add ScopClassificationProvider() and CathClassificationProvider()
 23-Nov-2019    V0.21 Move pipeline to py38
 10-Jan-2020    V0.22 Add fallback data source targets for CATH
 28-Jan-2020    V0.23 Increment the SCOPe version
  3-Feb-2020    V0.24 Update dependencies
 25-Jun-2020    V0.25 Increment the SCOPe version
 15-Aug-2020    V0.26 Add failover backup for CATH cache data
 28-Mar-2021    V0.27 Update dependencies and CI pipeline
  4-May-2021    V0.28 Add fallback options for ScopClassificationProvider()
  7-May-2021    V0.29 Update SCOP version
 10-Jul-2021    V0.30 Add SCOP2/B and ECOD provider modules and associated tests
 13-Jul-2021    V0.31 Adjust returned values in get range methods for SCOP2/B and ECOD
 15-Jul-2021    V0.32 Unify on the common provider constructor API, make providers a subclass of rcsb.utils.io.StashableBase
  3-Aug-2021    V0.33 Handle ECOD root id in getIdLineage()
  4-Aug-2021    V0.34 Assign synthetic names to unnamed SCOP2 domains
 21-Aug-2021    V0.35 Update dependencies and pipeline files
 23-Aug-2021    V0.36 Adjustments to ECOD lineage construction for unnamed nodes
 10-Sep-2021    V0.37 Separate protein type and structural class in tree representation.
 22-Sep-2021    V0.38 Add module EntryInfoProvider and associated tests (accessor methods only)
 23-Sep-2021    V0.39 Update SCOP version and path details
 16-Nov-2021    V0.40 Append additional ECOD annotations for given entryId and chainId instead of overwriting